--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "author": {
     "name": "Erlend Eiken Oppedal",
     "email": "erlend.oppedal@gmail.com"
+  },
+  "dependencies": {
+    "com.unity.inputsystem": ""
   }
 }
