--- a/ExtensionsAndAttributes.asmdef
+++ b/ExtensionsAndAttributes.asmdef
@@ -2,7 +2,8 @@
     "name": "ExtensionsAndAttributes",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:d525ad6bd40672747bde77962f1c401e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
