SO moved to Resources

--- a/ExtensionsAndAttributes.asmdef
+++ b/ExtensionsAndAttributes.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:d525ad6bd40672747bde77962f1c401e"
+        "GUID:d525ad6bd40672747bde77962f1c401e",
+        "GUID:610a8d0a178cb3044a9181f97bbb9b16"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
