--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "email": "erlend.oppedal@gmail.com"
   },
   "dependencies": {
-    "com.unity.inputsystem": "",
-    "ayellowpaper.serialized-dictionary": "https://github.com/ayellowpaper/SerializedDictionary.git"
+    "com.unity.inputsystem": ""
   }
 }
