--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "email": "erlend.oppedal@gmail.com"
   },
   "dependencies": {
-    "com.unity.inputsystem": ""
+    "com.unity.inputsystem": "1.14.0"
   }
 }
