Partial merge with other repos

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.erlend-eiken-oppedal.extensionsandattributes",
+  "name": "com.erlend-eiken-oppedal.extensions-and-attributes",
   "version": "1.0.0",
   "displayName": "Extensions And Attributes",
   "author": {
